<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".dangnhap">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_chaomungbandatl"
        android:textColor="#03A9F4"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_dangnhaptieptuc"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_nhapusername" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/txt_nhappassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="#4CAF50"
            android:text="Đănh Nhập"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF9800"
            android:text="Đăng Ký"
            android:textAllCaps="true" />

    </LinearLayout>
</LinearLayout>